# python-project-49

./: Makefile  README.md  demo.cast  pyproject.toml
.github/workflows/: README.md
asciinema/: 636791.cast  636794.cast  637053.cast  637061.cast  637077.cast  demo.cast
brain_games/: asker.py  cli.py  engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
