[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A set of five console games "
authors = ["Yulia <jilly-2005@yandex.ru>"]
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/YuliaPie/python-project-49.git"

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression  = "brain_games.scripts.brain_progression:main"
brain-prime  = "brain_games.scripts.brain_prime:main"
brain-calc  = "brain_games.scripts.brain_calc:main"
